# digikam-exiftool

./: CMakeLists.txt  README.md  exiftooloutput_cli.cpp  exiftoolparser.cpp  exiftoolparser.h  exiftoolprocess.cpp  exiftoolprocess.h
